--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -3,46 +3,42 @@
 {% block body -%}
     <h1>User</h1>
 
-    <table class="record_properties">
+    <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Lastname</th>
-                <td>{{ entity.lastname }}</td>
-            </tr>
-            <tr>
-                <th>Firstname</th>
-                <td>{{ entity.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Photo</th>
-                <td>{{ entity.photo }}</td>
-            </tr>
-            <tr>
-                <th>Bio</th>
-                <td>{{ entity.bio }}</td>
-            </tr>
-            <tr>
-                <th>Studentid</th>
-                <td>{{ entity.studentid }}</td>
-            </tr>
+        <tr>
+            <th>Lastname</th>
+            <td>{{ entity.lastname }}</td>
+        </tr>
+        <tr>
+            <th>Firstname</th>
+            <td>{{ entity.firstname }}</td>
+        </tr>
+        <tr>
+            <th>Photo</th>
+            <td><img src="{{ entity.photo }}" class="img-rounded img-responsive" alt="Responsive image of {{ entity.firstname }} {{ entity.lastname }}"></td>
+        </tr>
+        <tr>
+            <th>Bio</th>
+            <td>{{ entity.bio|raw }}</td>
+        </tr>
+        <tr>
+            <th>Studentid</th>
+            <td>{{ entity.studentid }}</td>
+        </tr>
         </tbody>
     </table>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('user') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('user_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <ul class="list-unstyled">
+        <li>
+            <a href="{{ path('user') }}">
+                Back to the list
+            </a>
+        </li>
+        <li>
+            <a href="{{ path('user_edit', { 'id': entity.id }) }}">
+                Edit
+            </a>
+        </li>
+        <li>{{ form(delete_form) }}</li>
+    </ul>
 {% endblock %}
