--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -15,7 +15,8 @@
     <ul>
         <li><a id='file_new_upload' title='Upload document' href="{{ path('file_new') }}"><i
                         class="glyphicon glyphicon-upload"></i> Upload</a></li>
-        <li><a id='file_new_link' title='Create new link' href="javascript:void(0);"><i
-                        class="glyphicon glyphicon-adjust"></i> Link</a></li>
+        <li><a  href="{{ path('module') }}"> Modules</a></li>
+        <li><a  href="{{ path('tag') }}"> Labels</a></li>
+        <li><a  href="{{ path('file') }}"> Files</a></li>
     </ul>
 {% endblock %}
