--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -6,3 +6,24 @@
 .margin-top {
     margin-top: 1%;
 }
+
+
+div.checkbox > label {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.checkbox input[type="checkbox"] {
+    position: inherit;
+    margin-left: 10px;
+}
+
+div.radio > label {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.radio input[type="radio"] {
+    position: inherit;
+    margin-left: 10px;
+}
