--- a/src/Sustain/AppBundle/Resources/views/File/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/new.html.twig
@@ -6,10 +6,10 @@
 <script language="javascript">
     $(document).ready(function () {
         $(":file").filestyle();
-        $('#sustain_appbundle_filetype_file').on('change', function () {
+        $('#sustain_appbundle_file_file').on('change', function () {
             var filename = $('input[type=file]').val().replace(/C:\\fakepath\\/i, '');
             var file = filename.substr(0, filename.lastIndexOf('.')) || filename;
-            $('#sustain_appbundle_filetype_name').val(file);
+            $('#sustain_appbundle_file_name').val(file);
             var a=(this.files[0].size/1024/1024);
             var filesize = Math.round(a * 100) / 100
             if(a > 10) {
@@ -21,7 +21,17 @@
 {% endblock %}
 
 {% block body -%}
+    <div class="col-sm-8">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <button id="close_form" type="button" class="close">&times;</button>
+                <h2 class="panel-title small">Upload</h2>
+            </div>
+            <div class="panel-body">
+                {{ form(form) }}
+            </div>
+        </div>
+    </div>
 
-    {{ form(form) }}
 
 {% endblock %}
