--- a/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Tag/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>File edit</h1>
+    <h1>Label edit</h1>
 
     {{ form(edit_form) }}
 
-
-    {{ form(delete_form) }}
-
+    <ul class="record_actions">
+    <li>{{ form(delete_form) }}</li>
+</ul>
 {% endblock %}
