--- a/src/Sustain/AppBundle/Resources/views/Tag/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Tag/new.html.twig
@@ -1,11 +1,8 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>File edit</h1>
+    <h1>Label creation</h1>
 
-    {{ form(edit_form) }}
-
-
-    {{ form(delete_form) }}
+    {{ form(form) }}
 
 {% endblock %}
