joins on files modules tags

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,7 @@
                     <a href="#main_content">Skip Navigation</a>
                 </li>
                 <li>
-                    <a title="Courses" href="">Resources</a>
+                    <a title="Courses" href="{{ path('file') }}">Resources</a>
                 </li>
             </ul>
 
