sample entity and crud

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,6 +40,9 @@
                 <li>
                     <a title="Courses" href="{{ path('file') }}">Resources</a>
                 </li>
+                <li>
+                    <a title="Courses" href="{{ path('sample') }}">Water Samples</a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right" id="account-dropdown">
