--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -27,3 +27,22 @@ div.radio > label {
     position: inherit;
     margin-left: 10px;
 }
+
+/**********  Accessibility **********/
+#skip a, #skip a:hover, #skip a:visited
+{
+    position:absolute;
+    left:0;
+    top:-500px;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
+
+#skip a:active, #skip a:focus {
+    position: static;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    margin-bottom: -10px;
+}
