--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -11,6 +11,7 @@
 {% block sidebar %}
 
     <ul>
+        <li><a  href="{{ path('objective') }}"> Objectives</a></li>
         <li><a  href="{{ path('module') }}"> Modules</a></li>
         <li><a  href="{{ path('tag') }}"> Labels</a></li>
         <li><a  href="{{ path('file') }}"> Files</a></li>
@@ -23,6 +24,7 @@
                         class="glyphicon glyphicon-upload"></i> Upload file</a></li>
         <li><a  href="{{ path('module_new') }}"> New Module</a></li>
         <li><a  href="{{ path('tag_new') }}"> New Label</a></li>
+        <li><a  href="{{ path('objective_new') }}"> New Objective</a></li>
         <li><a  href="{{ path('sample_new') }}"> New Sample</a></li>
     </ul>
 
