lots of progress

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,6 @@
     {% endblock %}
 </head>
 <body>
-<div class="col-sm-12">
     <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainnav">
@@ -37,12 +36,14 @@
                 <li id="skip">
                     <a href="#main_content">Skip Navigation</a>
                 </li>
+                {% if is_granted('ROLE_USER') %}
                 <li>
                     <a title="Courses" href="{{ path('file') }}">Resources</a>
                 </li>
                 <li>
                     <a title="Courses" href="{{ path('sample') }}">Water Samples</a>
                 </li>
+                {% endif %}
             </ul>
 
             <ul class="nav navbar-nav navbar-right" id="account-dropdown">
@@ -61,17 +62,18 @@
     </nav>
 
     <div style="margin-top: 70px;">
-        <div class="col-sm-2">
-            {% block sidebar %}
-            {% endblock %}
-        </div>
-        <div class="col-sm-10">
+        {% if 'home' not in app.request.attributes.get('_route') %}
+            <div class="col-sm-2">
+                {% block sidebar %}
+                {% endblock %}
+            </div>
+
+        {% endif %}
+        <div class="{% if 'home' not in app.request.attributes.get('_route') %}col-sm-10{% else %}col-sm-12{% endif %}">
         {% block body %}
         {% endblock %}
-        </div>
+            </div>
     </div>
 
-
-</div>
 </body>
 </html>
