--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -16,6 +16,8 @@
         <li><a  href="{{ path('tag') }}"> Labels</a></li>
         <li><a  href="{{ path('file') }}"> Files</a></li>
         <li><a  href="{{ path('sample') }}"> Samples</a></li>
+        <li><a  href="{{ path('section') }}"> Sections</a></li>
+        <li><a  href="{{ path('page') }}"> Pages</a></li>
     </ul>
 
 
@@ -26,6 +28,8 @@
         <li><a  href="{{ path('tag_new') }}"> New Label</a></li>
         <li><a  href="{{ path('objective_new') }}"> New Objective</a></li>
         <li><a  href="{{ path('sample_new') }}"> New Sample</a></li>
+        <li><a href="{{ path('section_new') }}">New Section</a></li>
+        <li><a href="{{ path('page_new') }}">New Page</a></li>
     </ul>
 
 {% endblock %}
