--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -2,8 +2,8 @@
 
 {% block body -%}
 
-    <div class="col-sm-12" style="background-color: #8edaf1; margin-top: -20px;margin-left: -15px; margin-right: -30px;">
-        <img src="{{ asset('bundles/app/images/watershed_logo.jpg') }}" class="" alt="Watershed UGA logo">
+    <div class="" style="background-color: #8edaf1; margin-top: -20px;margin-left: -15px; margin-right: -30px;">
+        <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
     </div>
 <div class="col-sm-12" style="padding:30px;">
     {% for entity in entities %}
