--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,7 @@
                 <li></li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right" id="account-dropdown">
+            <ul class="nav navbar-nav navbar-right" style="padding-right: 20px">
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <li>
                         <a title="Logout" href="{{ path('fos_user_security_logout') }}">Logout</a>
