--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
 
-    <div class="" style="background-color: #8edaf1; margin-top: -20px;margin-left: -15px; margin-right: -30px;">
+    <div class="" style="background-color: #82D3EE; margin-top: -20px;margin-left: -15px; margin-right: -15px; padding-right:300px">
         <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
     </div>
 <div class="col-sm-12" style="padding:30px;">
