--- a/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/index.html.twig
@@ -3,30 +3,12 @@
 {% block body -%}
     <h1>Modules</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Sortorder</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="list-group">
         {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('module_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
-                <td>{{ entity.sortorder }}</td>
-                <td>{{ entity.description }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('module_new') }}">
-                Create a new entry
+            <a href="{{ path('module_show', { 'id': entity.id }) }}" class="list-group-item">
+                <p class="list-group-item-text">{{ entity.description|raw }}</p>
             </a>
-        </li>
-    </ul>
+        {% endfor %}
+    </div>
+
     {% endblock %}
