--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,7 +66,7 @@
             </div>
 
         {% endif %}
-        <div class="{% if 'default' not in app.request.attributes.get('_route') %}col-sm-10{% else %}col-sm-12{% endif %}">
+        <div class="{% if 'default' in app.request.attributes.get('_route')  or 'page_show' in app.request.attributes.get('_route')  %}col-sm-12{% else %}col-sm-10{% endif %}">
         {% block body %}
         {% endblock %}
             </div>
