--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -15,6 +15,7 @@
         <li><a  href="{{ path('sample') }}"> Samples</a></li>
         <li><a  href="{{ path('section') }}"> Sections</a></li>
         <li><a  href="{{ path('page') }}"> Pages</a></li>
+        <li><a  href="{{ path('map') }}"> Mapping</a></li>
     </ul>
 
 
