--- a/src/Sustain/AppBundle/Resources/views/Map/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Map/show.html.twig
@@ -1,44 +1,32 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="{{ asset('bundles/app/js/jquery.ui.map.full.min.js') }}"></script>
 
+    <script language="javascript">
+        $(document).ready(function () {
+            $('#map_canvas').gmap().bind('init', function() {
+                // This URL won't work on your localhost, so you need to change it
+                // see http://en.wikipedia.org/wiki/Same_origin_policy
+                $.getJSON( '{{ path('json', {'map':entity.map}) }}', function(data) {
+                    $.each( data, function(i, marker) {
+                        $('#map_canvas').gmap('addMarker', {
+                            'position': new google.maps.LatLng(marker.latitude, marker.longitude),
+                            'bounds': true
+                        }).click(function() {
+                            $('#map_canvas').gmap('openInfoWindow', { 'content': marker.content }, this);
+                        });
+                    });
+                });
+            });
+        });
+    </script>
+{% endblock %}
 {% block body -%}
-    <h1>Map</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ entity.title }}</td>
-            </tr>
-            <tr>
-                <th>Lat</th>
-                <td>{{ entity.lat }}</td>
-            </tr>
-            <tr>
-                <th>Lng</th>
-                <td>{{ entity.lng }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ entity.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="map_canvas" class="col-lg-offset-1 col-sm-10" style="height:85vh;">
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('map') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('map_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    </div>
+
 {% endblock %}
