--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -15,7 +15,7 @@
         <li><a  href="{{ path('sample') }}"> Samples</a></li>
         <li><a  href="{{ path('section') }}"> Sections</a></li>
         <li><a  href="{{ path('page') }}"> Pages</a></li>
-        <li><a  href="{{ path('map') }}"> Mapping</a></li>
+        <li><a  href="{{ path('map') }}"> Map Points</a></li>
     </ul>
 
 
@@ -28,6 +28,7 @@
         <li><a  href="{{ path('sample_new') }}"> New Sample</a></li>
         <li><a href="{{ path('section_new') }}">New Section</a></li>
         <li><a href="{{ path('page_new') }}">New Page</a></li>
+        <li><a href="{{ path('theme_new') }}">New Theme</a></li>
     </ul>
 {% endif %}
 {% endblock %}
