--- a/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Map list</h1>
@@ -6,7 +6,6 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Title</th>
                 <th>Lat</th>
                 <th>Lng</th>
@@ -17,21 +16,11 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('map_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.title }}</td>
+                <td><a href="{{ path('map_show', { 'id': entity.id }) }}">{{ entity.title }}</a></td>
                 <td>{{ entity.lat }}</td>
                 <td>{{ entity.lng }}</td>
-                <td>{{ entity.description }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('map_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('map_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
+                <td>{{ entity.description|raw }}</td>
+                <td><a class="btn btn-default" href="{{ path('map_edit', { 'id': entity.id }) }}">edit</a></td>
             </tr>
         {% endfor %}
         </tbody>
