--- a/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
@@ -4,10 +4,16 @@
     <h1>Getting Started</h1>
 
     {% for entity in entities %}
-        <div class="col-sm-2">
-            {{ entity.image }}
-            {{ entity.description }}
-            {{ entity.name }}
+        <div class="col-sm-2 well" style="background-color: #82D3EE;">
+            <a href="{{ path('theme_show', { 'id': entity.id }) }}" class="">
+            <img src="{{ entity.image }}" class="img-responsive" alt="Watershed UGA logo">
+            <h2>
+                {{ entity.name }}
+            </h2>
+            <p>
+                {{ entity.description|raw }}
+            </p>
+            </a>
         </div>
     {% endfor %}
 
