--- a/src/Sustain/AppBundle/Resources/views/Theme/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Theme/show.html.twig
@@ -1,40 +1,26 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Theme</h1>
+    <div class="col-sm-12">
+        <h2>
+            {{ entity.name }}
+        </h2>
+        <p>
+            {{ entity.description|raw }}
+        </p>
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ entity.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ entity.description }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ entity.image }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <h3>Modules</h3>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('theme') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('theme_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+        <div class="list-group">
+            {% for entity in entity.modules %}
+                <a href="{{ path('module_show', { 'id': entity.id }) }}" class="list-group-item">
+                    <p class="list-group-item-heading">{{ entity.name|raw }}</p>
+                    <p class="list-group-item-text">{{ entity.description|raw }}</p>
+                </a>
+            {% endfor %}
+        </div>
+
+    </div>
+
+
 {% endblock %}
