--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -2,6 +2,23 @@
 
 {% block body -%}
     <h1>Module:  {{ entity.name }}</h1>
+    <a href="{{ path('module_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
+
+    <h2>Learning Objectives</h2>
+
+    <div class="list-group">
+        {% for entity in entity.objectives %}
+            <a href="{{ path('objective_show', { 'id': entity.id }) }}" class="list-group-item">
+                <p class="list-group-item-heading">{{ entity.objective|raw }}</p>
+
+                <p class="list-group-item-text">{{ entity.description|raw }}</p>
+            </a>
+        {% else %}
+            There are no Learning Objectives for this Module.
+        {% endfor %}
+    </div>
+
+    <h2>Resources</h2>
 
     <table id="file_list" class="col-sm-12 table">
         <thead>
