a bit more security

--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -2,8 +2,9 @@
 
 {% block body -%}
     <h1>Module:  {{ entity.name }}</h1>
-    <a href="{{ path('module_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
-
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('module_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
+    {% endif %}
     <h2>Learning Objectives</h2>
 
     <div class="list-group">
