--- a/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
@@ -6,7 +6,7 @@
     {% for entity in entities %}
         <div class="col-sm-2 well" style="height:80vh;">
             <a href="{{ path('theme_show', { 'id': entity.id }) }}" class="">
-            <img src="{{ entity.image }}" class="img-responsive" alt="Watershed UGA logo">
+            <img src="{{ entity.image }}" class="img-responsive img-rounded" alt="Watershed UGA logo">
             <h2>
                 {{ entity.name }}
             </h2>
