--- a/src/Sustain/AppBundle/Resources/views/Mapset/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/edit.html.twig
@@ -1,16 +1,10 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Mapset edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('mapset') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    {{ form(delete_form) }}
+
 {% endblock %}
