--- a/src/Sustain/AppBundle/Resources/views/Sample/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Sample/new.html.twig
@@ -1,15 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Sample creation</h1>
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('sample') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
 {% endblock %}
