--- a/src/Sustain/AppBundle/Resources/views/Theme/edit.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Theme/edit.html.twig
@@ -1,16 +1,10 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
     <h1>Theme edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('theme') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
+   {{ form(delete_form) }}
 </ul>
 {% endblock %}
