--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -8,7 +8,7 @@
 <div class="col-sm-12" style="padding:30px;">
     {% for entity in entities %}
 
-        <div class="col-sm-4">
+        <div class="col-sm-offset-1 col-sm-2">
             <a href="{{ path('page_show', {id:entity.id}) }}" title="Read more about {{ entity.menuName }} " ><img src="{{ entity.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ entity.menuName }}"></a>
             {{ entity.teaser|raw }}
         </div>
