--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -7,8 +7,10 @@
     </div>
 <div class="col-sm-12" style="padding:30px;">
     {% for entity in entities %}
+        {% set columns %}{% if entities|length == 2 %}col-sm-6{% elseif entities|length == 3 %}col-sm-4{% elseif entities|length == 4 %}col-sm-3{% elseif
+    entities|length == 5 %}col-sm-offset-1 col-sm-2{% endif %}{% endset %}
 
-        <div class="col-sm-offset-1 col-sm-2">
+        <div class="{{ columns }}">
             <a href="{{ path('page_show', {id:entity.id}) }}" title="Read more about {{ entity.menuName }} " ><img src="{{ entity.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ entity.menuName }}"></a>
             {{ entity.teaser|raw }}
         </div>
