--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -5,16 +5,24 @@
     <div class="" style="background-color: #82D3EE; margin-top: -20px;margin-left: -15px; margin-right: -15px; padding-right:300px">
         <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
     </div>
-<div class="col-sm-12" style="padding:30px;">
-    {% for entity in entities %}
-        {% set columns %}{% if entities|length == 2 %}col-sm-6{% elseif entities|length == 3 %}col-sm-4{% elseif entities|length == 4 %}col-sm-3{% elseif
-    entities|length == 5 %}col-sm-offset-1 col-sm-2{% endif %}{% endset %}
+    <div class="col-sm-12" style="padding:30px;">
+        {% for entity in entities %}
+            {% set columns %}{% if entities|length == 2 %}col-sm-6{% elseif entities|length == 3 %}col-sm-4{% elseif entities|length == 4 %}col-sm-3{% elseif
+        entities|length == 5 %}col-sm-offset-1 col-sm-2{% endif %}{% endset %}
 
-        <div class="{{ columns }}">
-            <a href="{{ path('page_show', {id:entity.id}) }}" title="Read more about {{ entity.menuName }} " ><img src="{{ entity.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ entity.menuName }}"></a>
-            {{ entity.teaser|raw }}
-        </div>
-    {% endfor %}
-</div>
+            <div class="{{ columns }}">
+                <a href="{{ path('page_show', {id:entity.id}) }}" title="Read more about {{ entity.menuName }} ">
+                    <img src="{{ entity.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ entity.menuName }}">
+
+                    <div class="caption">
+                        <h3>{{ entity.teaserImageCaption }}</h3>
+                        <p>{{ entity.teaser|raw }}</p>
+                    </div>
+
+
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
