--- a/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Map/index.html.twig
@@ -20,17 +20,17 @@
                 <td>{{ entity.lat }}</td>
                 <td>{{ entity.lng }}</td>
                 <td>{{ entity.description|raw }}</td>
-                <td><a class="btn btn-default" href="{{ path('map_edit', { 'id': entity.id }) }}">edit</a></td>
+                <td>
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
+                        <a class="btn btn-default" href="{{ path('map_edit', { 'id':
+                        entity.id }) }}">Edit</a>
+                    {% endif %}
+                    {% endif %}
+                </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('map_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
