--- a/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
@@ -1,11 +1,12 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Objective: </h1>
-    {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('objective_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
+    <h1>{{ entity.objective|raw }}</h1>
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        {% if entity.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
+            <a href="{{ path('objective_edit', { 'id': entity.id }) }}" class="btn btn-default pull-right">Edit</a>
+        {% endif %}
     {% endif %}
-    <p>{{ entity.objective|raw }}</p>
     <p>{{ entity.description|raw }}</p>
 
     <table id="file_list" class="col-sm-12 table">
