--- a/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/index.html.twig
@@ -14,8 +14,7 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('page_show', { 'id': entity.id }) }}">{{ entity.menuName }}</a></td>
-                <td>
-                        <a class="btn btn-default" href="{{ path('page_edit', { 'id': entity.id }) }}">edit</a>
+                <td>{% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default" href="{{ path('page_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
                 </td>
             </tr>
         {% endfor %}
