--- a/src/Sustain/AppBundle/Resources/views/Tag/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Tag/index.html.twig
@@ -9,6 +9,7 @@
                 <th>Name</th>
                 <th>Color</th>
                 <th>Sortorder</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -17,17 +18,10 @@
                 <td><a href="{{ path('tag_show', { 'id': entity.id }) }}">{{ entity.name }}</a></td>
                 <td>{{ entity.color }}</td>
                 <td>{{ entity.sortorder }}</td>
-                <td>
+                <td>{% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default" href="{{ path('tag_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('tag_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
