--- a/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Theme/index.html.twig
@@ -14,6 +14,7 @@
                 {{ entity.description|raw }}
             </p>
             </a>
+            {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-default" href="{{ path('theme_edit', { 'id': entity.id }) }}">Edit</a>{% endif %}
         </div>
     {% endfor %}
 
