--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,7 +61,7 @@
     </nav>
 
     <div style="margin-top: 70px;">
-        {% if 'default' in app.request.attributes.get('_route')  or 'page_show' in app.request.attributes.get('_route')  %}
+        {% if 'default' in app.request.attributes.get('_route')   %}
             {% else %}
             <div class="col-sm-2">
                 {% block sidebar %}
@@ -69,7 +69,7 @@
             </div>
 
         {% endif %}
-        <div class="{% if 'default' in app.request.attributes.get('_route')  or 'page_show' in app.request.attributes.get('_route')  %}col-sm-12{% else %}col-sm-10{% endif %}">
+        <div class="{% if 'default' in app.request.attributes.get('_route') %}col-sm-12{% else %}col-sm-10{% endif %}">
         {% block body %}
         {% endblock %}
             </div>
